--- a/Pages/Sobre Nosotros.html
+++ b/Pages/Sobre Nosotros.html
@@ -186,7 +186,7 @@
                             <div class="col-md-8 border-start">
                                 <div class="card-body">
                                     <h5 class="card-title">CAMVI</h5>
-                                    <p class="card-text"> Mantener una excelente reputación y satisfacción del cliente
+                                    <p class="card-text"> Mantener una excelente reputación y satisfacción de los clientes
                                     </p>
                                 </div>
                             </div>
