--- a/Pages/Catálogo.html
+++ b/Pages/Catálogo.html
@@ -11,7 +11,122 @@
     <script src="../JavaScript/HeaderPages.js"></script>
     <script src="../JavaScript/FooterPages.js"></script>
 </head>
+<style>
+    *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans';
+}
+.contenido{
+    max-width: 1200px;
+    width: 100%;
+    margin: 40px auto;
+    display: flex;
+}
+.catalogo{
+    width: 100%;
+    transition: .5s ease;
+}
+.catalogo .fila{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
 
+.catalogo .fila .item{
+    max-width: 210px;
+    padding: 30px;
+    height: 250px;
+    border: 2px solid rgb(14, 13, 13);
+    text-align: center;
+    margin: 0 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: .3s;
+}
+.catalogo .fila .item:hover{
+    background-color: #111111;
+}
+.catalogo .fila .item img{
+    width: 100%;
+    margin: 30px 0;
+}
+.catalogo .fila .item .name{
+    color: #707070;
+    font-weight: bold;
+}
+.catalogo .fila .item .desc{
+    color: #ffee00d8;
+    font-weight: bold;
+    font-size: 20px;
+}
+.seleccion{
+    transition: .5s ease;
+    opacity: 0;
+    width: 0%;
+    border: 1px solid #ccc;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+}
+.cerrar{
+    position: absolute;
+    right: 0;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+}
+
+.info{
+    padding: 20px;
+}
+.info img{
+    display: block;
+    margin: 30px auto;
+    width: 80%;
+}
+.info h2{
+    color: #707070;
+    margin-bottom: 10px;
+}
+.info p{
+    font-size: 14px;
+    color: #707070;
+    margin-bottom: 10px;
+}
+.info .desc{
+    font-size: 30px;
+    font-weight: bold;
+    color: #f85151;
+    margin-bottom: 10px;
+    display: block;
+}
+.info .fila{
+    display: flex;
+    align-items: flex-end;
+}
+.info .fila label{
+    display: block;
+    margin-bottom: 10px;
+}
+.info .fila select{
+    width: 100px;
+    font-size: 18px;
+    padding: 6px;
+    margin-right: 30px;
+}
+.info .fila button{
+    height: 40px;
+    border: none;
+    padding: 0 10px;
+    color: #fff;
+    background-color: #f85151;
+}
+</style>
 <body>
     <header id="Header"><!--Este Id solo servirá para que JavaScript Ubique el elemento e inserte el código-->
         
