agrege una nueva carpeta de JS y agrege el js para el catalogo

--- a/Pages/Catálogo.html
+++ b/Pages/Catálogo.html
@@ -215,6 +215,7 @@
     <footer id="Footer"><!--Este Id solo servirá para que JavaScript Ubique el elemento e inserte el código-->
         
     </footer>
+    <script src="../JavaScript/catalogo.js"></script>
     <script src="../Bootstrap/js/bootstrap.min.js"></script>
     <script src="../JavaScript/CargarNavPages.js"></script>
     <script src="../JavaScript/CargarFooterPages.js"></script>
