agrugue imagenes al catalogo

--- a/Pages/Catálogo.html
+++ b/Pages/Catálogo.html
@@ -138,21 +138,21 @@
             <div class="fila">
                 <div class="item" onclick="cargar(this)">
                     <div class="catalogo-img">
-                        <img src=".//Downloads/pareja-de-boda (3).png" alt="">
+                        <img src="../Images/boda_img.jpg" alt="">
                     </div>
                     <p class="name">Boda</p>
                     <span class="desc">Descripción  </span>
                 </div>
                 <div class="item" onclick="cargar(this)">
                     <div class="catalogo-img">
-                        <img src=".//Downloads/tiempo-de-fiesta.png" alt="">
+                        <img src="..//Images/15_img.jpg" alt="">
                     </div>
                     <p class="name" id>15 años</p>
                     <span class="desc">Descripción</span>
                 </div>
                 <div class="item" onclick="cargar(this)">
                     <div class="catalogo-img">
-                        <img src="img/3.png" alt="">
+                        <img src="..//Images/fiesta_img.jpg" alt="">
                     </div>
                     <p class="name">Fiestas
                     </p>
@@ -160,7 +160,7 @@
                 </div>
                 <div class="item" onclick="cargar(this)">
                     <div class="catalogo-img">
-                        <img src="img/4.png" alt="">
+                        <img src="..//Images/fiestaInfantil_img.jpg" alt="">
                     </div>
                     <p class="name">Fiestas infantiles</p>
                     <span class="desc">Descripción</span>
@@ -169,28 +169,28 @@
             <div class="fila">
                 <div class="item" onclick="cargar(this)">
                     <div class="catalogo-img">
-                        <img src="img/5.png" alt="">
+                        <img src="..//Images/velorio_img.webp" alt="">
                     </div>
                     <p class="name">Velorios</p>
                     <span class="desc">Descripción</span>
                 </div>
                 <div class="item" onclick="cargar(this)">
                     <div class="catalogo-img">
-                        <img src="img/6.png" alt="">
+                        <img src="..//Images/fiestas-privadas_img.png" alt="">
                     </div>
                     <p class="name">Eventos privados</p>
                     <span class="desc">Descripción</span>
                 </div>
                 <div class="item" onclick="cargar(this)">
                     <div class="catalogo-img">
-                        <img src="img/7.png" alt="">
+                        <img src="..//Images/eventosPublicos_img.jpg" alt="">
                     </div>
                     <p class="name">Eventos publicos</p>
                     <span class="desc">Descripción</span>
                 </div>
                 <div class="item" onclick="cargar(this)">
                     <div class="catalogo-img">
-                        <img src="img/8.png" alt="">
+                        <img src="..//Images/cupleaños_img.jpg" alt="">
                     </div>
                     <p class="name">Cumpleaños</p>
                     <span class="desc">Descripción</span>
