agregue estilo a pagina de reservas

--- a/Pages/Reserva de sesiones.html
+++ b/Pages/Reserva de sesiones.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="../Images/Camvi_Logo.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../Css/Style.css  ">
+    <link rel="stylesheet" href="../Css/Reserva.for.css">
     <script src="../JavaScript/HeaderPages.js"></script>
     <script src="../JavaScript/FooterPages.js"></script>
 </head>
@@ -16,7 +17,7 @@
     <header id="Header"><!--Este Id solo servirá para que JavaScript Ubique el elemento e inserte el código-->
 
     </header>
-
+<br>
     <main style="height: 85vh; display: flex; flex-direction: column; justify-content: center; align-items:center; justify-items: center; ">
 
         <h1>
@@ -45,6 +46,7 @@
             <button type="submit" class="btn btn-primary">Enviar solicitud</button>
         </form>
     </main>
+    <br>
 
     <footer id="Footer"><!--Este Id solo servirá para que JavaScript Ubique el elemento e inserte el código-->
 
