--- a/Index.html
+++ b/Index.html
@@ -80,7 +80,7 @@
                         Bienvenido a CAMVI
                      </h1>
                      <p class="mt-4 text-lg text-blueGray-200">
-                        Sesiones de foto para cualquier tipo de ocasión
+                        Sesiones fotográficas para cualquier tipo de ocasión
                      </p>
                   </div>
                </div>
