solo puse una k en el index xd

--- a/Index.html
+++ b/Index.html
@@ -102,7 +102,7 @@
                   <p>Organiza sesiones fotográficas en las que te sientas cómodo y natural. Esto permitirá que tus
                      personalidades brillen, recreando momentos únicos.
                      <br><br>
-                     <span class="text-uppercase"><strong>"Deja que tu sonrisa haga clic"</strong></span></b>
+                     <span class="text-uppercase"><strong>"Deja que tu sonrisa haga click"</strong></span></b>
                   </p>
                </div>
             </div>
