--- a/Pages/Reserva de sesiones.html
+++ b/Pages/Reserva de sesiones.html
@@ -18,15 +18,16 @@
 
     </header>
 <br>
-    <main style="height: 85vh; display: flex; flex-direction: column; justify-content: center; align-items:center; justify-items: center; ">
+    <main style="height: 85vh; display: flex; flex-direction: column; justify-content: center; align-items:center; justify-items: center; padding: 35px;">
 
+        <br><br><br>
         <h1>
             Reserva de sesiones
         </h2>
         <h4>
             Aquí podrás reservar tus sesiones.
         </h4>
-        <form>
+        <form style="font-size: larger;">
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -39,7 +40,7 @@
             </div>
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Fecha y hora para la sesión</label>
-                <input type="date" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="datetime-local" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             
 
