--- a/Pages/Sobre Nosotros.html
+++ b/Pages/Sobre Nosotros.html
@@ -174,7 +174,7 @@
               </div>
               <div class="col-md-8 border-start ">
                 <div class="card-body">
-                  <h5 class="card-title">CAMVI</h5>
+                  <h5 class="card-title">Primer Objetivo</h5>
                   <p class="card-text">Satisfacer las necesidades y deseos de los clientes</p>
                 </div>
               </div>
@@ -188,7 +188,7 @@
               </div>
               <div class="col-md-8 border-start">
                 <div class="card-body">
-                  <h5 class="card-title">CAMVI</h5>
+                  <h5 class="card-title">Segundo Objetivo</h5>
                   <p class="card-text">Proporcionar servicios de fotografía de alta calidad
                   </p>
                 </div>
@@ -203,7 +203,7 @@
               </div>
               <div class="col-md-8 border-start">
                 <div class="card-body">
-                  <h5 class="card-title">CAMVI</h5>
+                  <h5 class="card-title">Tercer Objetivo</h5>
                   <p class="card-text"> Mantener una excelente reputación y satisfacción de los clientes
                   </p>
                 </div>
