agregue imagenes en los objetivos

--- a/Pages/Sobre Nosotros.html
+++ b/Pages/Sobre Nosotros.html
@@ -170,7 +170,7 @@
           <div class="card mb-5 justify-content-center">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="../Images/objetivo.jpg" class="img-fluid rounded-start">
+                <img src="../Images/satisfaccion-cliente.jpg" class="img-fluid rounded-start">
               </div>
               <div class="col-md-8 border-start ">
                 <div class="card-body">
@@ -184,7 +184,7 @@
           <div class="card mt-4 mb-5 justify-content-center">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="../Images/objetivo.jpg" class="img-fluid rounded-start mt-3">
+                <img src="../Images/excelente servicio.jpg" class="img-fluid rounded-start mt-3">
               </div>
               <div class="col-md-8 border-start">
                 <div class="card-body">
@@ -199,7 +199,7 @@
           <div class="card mt-4 mb-5 justify-content-center">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="../Images/objetivo.jpg" class="img-fluid rounded-start mt-3">
+                <img src="../Images/excelente reputacion.jpg" class="img-fluid rounded-start mt-3">
               </div>
               <div class="col-md-8 border-start">
                 <div class="card-body">
